Perbuhan Html & css

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 style="background-color: rgba(0, 0, 0, 0.655);">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2 class="product-section-title display-1 my-3 my-md-5   py-md-5 shadow-lg"
+                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3 py-md-5 shadow-lg"
                             style="font-size: clamp(1.5rem, 7vw, 3.5rem);">Our Features</h2>
                         <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Temukan fitur-fitur unik yang
                             membedakan Enauto Coffe dari yang lain. Dari
