--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 style="background-color: rgba(0, 0, 0, 0.655); border-bottom: 2px solid; height: 100%; display: flex; align-items: center; justify-content: center;">
                 <div class="row py-lg-5 pb-md-5 px-3 px-md-5 mt-lg-5">
                     <div class="col-12 d-flex justify-content-center align-items-center">
-                        <div class="container-fluid text-center   text-light shadow-lg p-3 p-md-4 rounded">
+                        <div class="container-fluid text-center my-5  text-light shadow-lg p-3 p-md-4 rounded">
                             <h2 class="product-section-title display-1  shadow-lg"
                                 style="font-size: clamp(1.5rem, 7vw, 3.5rem);">About Us</h2>
                             <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1rem);">Enauto Coffe adalah Coffe Shop
