--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="container-fluid "
                 style="background-color: rgba(0, 0, 0, 0.655); border-bottom: 2px solid; height: 100%; display: flex; align-items: center; justify-content: center;">
                 <div class="row py-lg-5 pb-md-5 px-3 px-md-5 mt-lg-5">
-                    <div class="col-12 d-flex justify-content-center align-items-center">
-                        <div class="container-fluid text-center my-5  text-light shadow-lg p-3 p-md-4 rounded">
-                            <h2 class="product-section-title display-1  shadow-lg"
+                    <div class="col-12">
+                        <div class="container-fluid text-center text-light">
+                            <h2 class="product-section-title display-1 shadow-lg"
                                 style="font-size: clamp(1.5rem, 7vw, 3.5rem);">About Us</h2>
                             <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1rem);">Enauto Coffe adalah Coffe Shop
                                 terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
@@ -107,30 +107,30 @@
                                 customer service kami siap melayani dengan profesional dan memberikan yang terbaik untuk
                                 kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
                                 kopi Anda.</p>
-                            <div class="col-12">
-                                <div class="row g-2 g-md-4">
-                                    <div class="col-12 col-md-6">
-                                        <div
-                                            class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                            <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"
-                                                style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                            <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Quality Beans
-                                            </h3>
-                                            <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Kami hanya menggunakan
-                                                biji kopi terbaik dari petani terpercaya.</p>
-                                        </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="row g-2 g-md-4">
+                                <div class="col-12 col-md-6">
+                                    <div
+                                        class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                        <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"
+                                            style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
+                                        <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Quality Beans
+                                        </h3>
+                                        <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Kami hanya menggunakan
+                                            biji kopi terbaik dari petani terpercaya.</p>
                                     </div>
-                                    <div class="col-12 col-md-6">
-                                        <div
-                                            class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                            <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"
-                                                style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                            <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Experienced
-                                                Baristas</h3>
-                                            <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Tim barista kami
-                                                berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
-                                            </p>
-                                        </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div
+                                        class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                        <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"
+                                            style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
+                                        <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Experienced
+                                            Baristas</h3>
+                                        <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Tim barista kami
+                                            berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
