Refactor: Samakan struktur about section dengan features section layout
- Ubah struktur HTML about section agar identik dengan features section
- Pindahkan h2 dan p ke dalam col-12 text-center untuk consistency
- Posisikan product cards tepat di bawah judul dan paragraf
- Simplify CSS dengan menghapus unnecessary container selectors
- Update responsive styles untuk semua breakpoints
- Maintain semua hover effects dan animations
- Ensure proper spacing dan alignment di semua device sizes

--- a/index.html
+++ b/index.html
@@ -84,54 +84,52 @@
         <!-- About section -->
         <section id="about"
             style="background-image: url(assets/img/image\ \(1\).png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 100vh; padding: 0;">
-            <div class="container-fluid "
-                style="background-color: rgba(0, 0, 0, 0.655); border-bottom: 2px solid; height: 100%; display: flex; align-items: center; justify-content: center;">
-                <div class="row py-lg-5 pb-md-5 px-3 px-md-5 mt-lg-5">
-                    <div class="col-12">
-                        <div class="container-fluid text-center text-light">
-                            <h2 class="product-section-title display-1 shadow-lg"
-                                style="font-size: clamp(1.5rem, 7vw, 3.5rem);">About Us</h2>
-                            <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1rem);">Enauto Coffe adalah Coffe Shop
-                                terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
-                                rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
-                                melayani ribuan pelanggan setia dengan setiap biji kopi yang dipilih langsung dari
-                                petani terpercaya. Tim barista kami terlatih dan berpengalaman lebih dari 10 tahun
-                                menggunakan mesin espresso terkini untuk menghasilkan kopi terbaik. Suasana kedai kami
-                                dirancang untuk kenyamanan maksimal dengan menyediakan WiFi gratis untuk semua
-                                pengunjung. Kami menyediakan berbagai menu makanan ringan yang lezat dengan harga sangat
-                                kompetitif dan terjangkau untuk semua kalangan. Lokasi kedai kami strategis dan mudah
-                                diakses dari berbagai tempat dengan prioritas utama kebersihan dan kualitas hygienitas.
-                                Pelanggan dapat menikmati kopi di dalam kedai atau membawa pulang, serta mendapatkan
-                                poin reward dari setiap pembelian. Kami memiliki program loyalitas khusus untuk
-                                pelanggan setia dan terus membuka cabang baru di berbagai kota besar Indonesia. Tim
-                                customer service kami siap melayani dengan profesional dan memberikan yang terbaik untuk
-                                kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
-                                kopi Anda.</p>
-                        </div>
-                        <div class="col-12">
-                            <div class="row g-2 g-md-4">
-                                <div class="col-12 col-md-6">
-                                    <div
-                                        class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                        <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"
-                                            style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                        <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Quality Beans
-                                        </h3>
-                                        <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Kami hanya menggunakan
-                                            biji kopi terbaik dari petani terpercaya.</p>
-                                    </div>
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light"
+                style="background-color: rgba(0, 0, 0, 0.655);">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3 py-md-5 shadow-lg"
+                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">About Us</h2>
+                        <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe Shop
+                            terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
+                            rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
+                            melayani ribuan pelanggan setia dengan setiap biji kopi yang dipilih langsung dari
+                            petani terpercaya. Tim barista kami terlatih dan berpengalaman lebih dari 10 tahun
+                            menggunakan mesin espresso terkini untuk menghasilkan kopi terbaik. Suasana kedai kami
+                            dirancang untuk kenyamanan maksimal dengan menyediakan WiFi gratis untuk semua
+                            pengunjung. Kami menyediakan berbagai menu makanan ringan yang lezat dengan harga sangat
+                            kompetitif dan terjangkau untuk semua kalangan. Lokasi kedai kami strategis dan mudah
+                            diakses dari berbagai tempat dengan prioritas utama kebersihan dan kualitas hygienitas.
+                            Pelanggan dapat menikmati kopi di dalam kedai atau membawa pulang, serta mendapatkan
+                            poin reward dari setiap pembelian. Kami memiliki program loyalitas khusus untuk
+                            pelanggan setia dan terus membuka cabang baru di berbagai kota besar Indonesia. Tim
+                            customer service kami siap melayani dengan profesional dan memberikan yang terbaik untuk
+                            kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
+                            kopi Anda.</p>
+                    </div>
+                    <div class="col-12 bg-transparent rounded-3 shadow-lg pt-2 pt-md-3">
+                        <div class="row g-2 g-md-4 mb-3 mb-md-5 my-3 my-md-5 px-3 px-md-0">
+                            <div class="col-12 col-md-6">
+                                <div
+                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"
+                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
+                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Quality Beans
+                                    </h3>
+                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Kami hanya menggunakan
+                                        biji kopi terbaik dari petani terpercaya.</p>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <div
-                                        class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                        <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"
-                                            style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                        <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Experienced
-                                            Baristas</h3>
-                                        <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Tim barista kami
-                                            berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
-                                        </p>
-                                    </div>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div
+                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"
+                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
+                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Experienced
+                                        Baristas</h3>
+                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Tim barista kami
+                                        berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
+                                    </p>
                                 </div>
                             </div>
                         </div>
