--- a/index.html
+++ b/index.html
@@ -84,12 +84,17 @@
         <!-- About section -->
         <section id="about"
             style="background-image: url(assets/img/image\ \(1\).png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 100vh; padding: 0;">
-            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light"
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-start justify-content-center text-light"
                 style="background-color: rgba(0, 0, 0, 0.655);">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3 py-md-5 shadow-lg"
+                <div class="row w-100">
+                    <!-- Title -->
+                    <div class="col-12 text-center py-3 py-md-5">
+                        <h2 class="product-section-title display-1 mb-0"
                             style="font-size: clamp(1.5rem, 7vw, 3.5rem);">About Us</h2>
+                    </div>
+                    
+                    <!-- Paragraph -->
+                    <div class="col-12 text-center mb-4 mb-md-5">
                         <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe Shop
                             terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
                             rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
@@ -107,8 +112,10 @@
                             kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
                             kopi Anda.</p>
                     </div>
-                    <div class="col-12 bg-transparent rounded-3 shadow-lg pt-2 pt-md-3">
-                        <div class="row g-2 g-md-4 mb-3 mb-md-5 my-3 my-md-5 px-3 px-md-0">
+                    
+                    <!-- Cards -->
+                    <div class="col-12">
+                        <div class="row g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
