--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
                     </div>
                     
                     <!-- Cards -->
-                    <div class="col-12">
-                        <div class="row g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
-                            <div class="col-12 col-md-6">
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
+                            <div class="col-6 col-md-6">
                                 <div
-                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"
-                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Quality Beans
+                                    class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-seedling mb-2 mb-md-2"
+                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
+                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Quality Beans
                                     </h3>
-                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Kami hanya menggunakan
+                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Kami hanya menggunakan
                                         biji kopi terbaik dari petani terpercaya.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6">
+                            <div class="col-6 col-md-6">
                                 <div
-                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"
-                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Experienced
+                                    class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-users mb-2 mb-md-2"
+                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
+                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Experienced
                                         Baristas</h3>
-                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Tim barista kami
+                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Tim barista kami
                                         berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
                                     </p>
                                 </div>
