--- a/index.html
+++ b/index.html
@@ -91,63 +91,60 @@
                     <div class="col-12 text-center py-3 py-md-5">
                         <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
                             About Us</h2>
-                        </>
+                    </div>
+                    <!-- Paragraph -->
+                    <div class="col-12 text-center mb-4 mb-md-5 mx-auto" style="max-width: 1000px;">
+                        <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe
+                            Shop
+                            terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
+                            rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
+                            melayani ribuan pelanggan setia dengan setiap biji kopi yang dipilih langsung dari
+                            petani terpercaya. Tim barista kami terlatih dan berpengalaman lebih dari 10 tahun
+                            menggunakan mesin espresso terkini untuk menghasilkan kopi terbaik. Suasana kedai kami
+                            dirancang untuk kenyamanan maksimal dengan menyediakan WiFi gratis untuk semua
+                            pengunjung. Kami menyediakan berbagai menu makanan ringan yang lezat dengan harga sangat
+                            kompetitif dan terjangkau untuk semua kalangan. Lokasi kedai kami strategis dan mudah
+                            diakses dari berbagai tempat dengan prioritas utama kebersihan dan kualitas hygienitas.
+                            Pelanggan dapat menikmati kopi di dalam kedai atau membawa pulang, serta mendapatkan
+                            poin reward dari setiap pembelian. Kami memiliki program loyalitas khusus untuk
+                            pelanggan setia dan terus membuka cabang baru di berbagai kota besar Indonesia. Tim
+                            customer service kami siap melayani dengan profesional dan memberikan yang terbaik untuk
+                            kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
+                            kopi Anda.</p>
+                    </div>
 
-                        <!-- Paragraph -->
-                        <div class="col-12 text-center mb-4 mb-md-5 mx-auto" style="max-width: 1000px;">
-                            <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe
-                                Shop
-                                terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
-                                rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
-                                melayani ribuan pelanggan setia dengan setiap biji kopi yang dipilih langsung dari
-                                petani terpercaya. Tim barista kami terlatih dan berpengalaman lebih dari 10 tahun
-                                menggunakan mesin espresso terkini untuk menghasilkan kopi terbaik. Suasana kedai kami
-                                dirancang untuk kenyamanan maksimal dengan menyediakan WiFi gratis untuk semua
-                                pengunjung. Kami menyediakan berbagai menu makanan ringan yang lezat dengan harga sangat
-                                kompetitif dan terjangkau untuk semua kalangan. Lokasi kedai kami strategis dan mudah
-                                diakses dari berbagai tempat dengan prioritas utama kebersihan dan kualitas hygienitas.
-                                Pelanggan dapat menikmati kopi di dalam kedai atau membawa pulang, serta mendapatkan
-                                poin reward dari setiap pembelian. Kami memiliki program loyalitas khusus untuk
-                                pelanggan setia dan terus membuka cabang baru di berbagai kota besar Indonesia. Tim
-                                customer service kami siap melayani dengan profesional dan memberikan yang terbaik untuk
-                                kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
-                                kopi Anda.</p>
-                        </div>
-
-                        <!-- Cards -->
-                        <div class="col-12 d-flex justify-content-center">
-                            <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
-                                <div class="col-6 col-md-6">
-                                    <div
-                                        class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                        <i class="fas fa-seedling mb-2 mb-md-2"
-                                            style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
-                                        <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Quality Beans
-                                        </h3>
-                                        <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Kami
-                                            hanya
-                                            menggunakan
-                                            biji kopi terbaik dari petani terpercaya.</p>
-                                    </div>
+                    <!-- Cards -->
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
+                            <div class="col-6 col-md-6">
+                                <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-seedling mb-2 mb-md-2"
+                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
+                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Quality Beans
+                                    </h3>
+                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Kami
+                                        hanya
+                                        menggunakan
+                                        biji kopi terbaik dari petani terpercaya.</p>
                                 </div>
-                                <div class="col-6 col-md-6">
-                                    <div
-                                        class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                        <i class="fas fa-users mb-2 mb-md-2"
-                                            style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
-                                        <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Experienced
-                                            Baristas</h3>
-                                        <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Tim
-                                            barista
-                                            kami
-                                            berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
-                                        </p>
-                                    </div>
+                            </div>
+                            <div class="col-6 col-md-6">
+                                <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-users mb-2 mb-md-2"
+                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
+                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Experienced
+                                        Baristas</h3>
+                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Tim
+                                        barista
+                                        kami
+                                        berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!--Features section  -->
@@ -158,8 +155,9 @@
                 style="background-color: rgba(0, 0, 0, 0.655);">
                 <div class="row">
                     <div class="col-12 text-center py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0"
-                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">Our Features</h2>
+                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5"
+                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
+                            Our Features</h2>
                         <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Temukan fitur-fitur unik yang
                             membedakan Enauto Coffe dari yang lain. Dari
                             perpaduan kopi kami yang ahli hingga suasana nyaman, kami menawarkan pengalaman kopi yang
@@ -211,9 +209,9 @@
         <section id="pricing" class="product-section border-top border-bottom border-secondary">
             <div class="container-fluid py-3 py-md-5 px-3 px-md-5 text-light">
                 <div class="row w-100 align-items-center justify-content-center">
-                    <div class="col-12 text-center mb-4 mb-md-5 py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0"
-                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">Our Pricing</h2>
+                    <div class="col-12 text-center mb-4 mb-md-5 ">
+                        <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
+                            Our Pricing</h2>
                         <p class="lead py-2 py-md-3" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe
                             menawarkan berbagai pilihan kopi berkualitas tinggi dengan
                             harga
@@ -330,8 +328,8 @@
             <div class="container-fluid border-3 px-3 px-md-5">
                 <div class="row w-100 align-items-center justify-content-center">
                     <div class="col-12 text-center mb-4 mb-md-5 py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0"
-                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">Contact info</h2>
+                        <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
+                            Contact info</h2>
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="text-light text-center fw-semibold shadow-lg rounded p-3 p-md-4">
