--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             About Us</h2>
                     </div>
                     <!-- Paragraph -->
-                    <div class="col-12 text-center mb-4 mb-md-5 mx-auto" style="max-width: 1000px;">
+                    <div class="col-12 text-center mb-2  mx-auto" style="max-width: 1000px;">
                         <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe
                             Shop
                             terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
@@ -114,7 +114,7 @@
                     </div>
 
                     <!-- Cards -->
-                    <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-center mb-4 mb-md-5">
                         <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
                             <div class="col-6 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
@@ -166,8 +166,8 @@
                             yang luar biasa, memastikan setiap kunjungan berkesan. Apakah Anda di sini untuk bekerja,
                             bersantai, atau bersosialisasi, Enauto Coffe memiliki sesuatu untuk semua orang.</p>
                     </div>
-                    <div class="col-12 bg-transparent rounded-3 shadow-lg  pt-2 pt-md-3">
-                        <div class="row g-2 g-md-4 mb-3 mb-md-5 my-3 my-md-5 px-3 px-md-0">
+                    <div class="col-12 bg-transparent rounded-3 shadow-lg  pt-2 pt-md-3 py-3 py-md-5">
+                        <div class="row g-2 g-md-4 mb-3 mb-md-5  px-3 px-md-0">
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded"
                                     style="border-top: 2px solid; border-right: 2px solid;">
@@ -210,7 +210,8 @@
             <div class="container-fluid py-3 py-md-5 px-3 px-md-5 text-light">
                 <div class="row w-100 align-items-center justify-content-center">
                     <div class="col-12 text-center mb-4 mb-md-5 ">
-                        <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
+                        <h2 class="product-section-title display-1 my-3 my-md-5"
+                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
                             Our Pricing</h2>
                         <p class="lead py-2 py-md-3" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe
                             menawarkan berbagai pilihan kopi berkualitas tinggi dengan
@@ -316,6 +317,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
         </section>
 
         <!--Contact section  -->
@@ -331,7 +333,7 @@
                         <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
                             Contact info</h2>
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 ">
                         <div class="text-light text-center fw-semibold shadow-lg rounded p-3 p-md-4">
                             <h1 style="font-size: clamp(1.2rem, 3vw, 1.8rem);">Message</h1>
                             <form class="py-3 py-md-5">
