--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
         <!--Pricing section  -->
         <section id="pricing" class="product-section border-top border-bottom border-secondary">
             <div class="container-fluid py-3 py-md-5 px-3 px-md-5 text-light">
-                <div class="row w-100 align-items-center justify-content-center">
+                <div class="row w-100 align-items-center justify-content-center py-2 py-md-3">
                     <div class="col-12 text-center mb-4 mb-md-5 ">
-                        <h2 class="product-section-title display-1 my-3 my-md-5"
+                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3"
                             style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
                             Our Pricing</h2>
                         <p class="lead py-2 py-md-3" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe
