--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <!-- Cards -->
                     <div class="col-12 d-flex justify-content-center mb-4 mb-md-5">
                         <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
-                            <div class="col-6 col-md-6">
+                            <div class="col-12 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
                                     <i class="fas fa-seedling mb-2 mb-md-2"
                                         style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
@@ -128,7 +128,7 @@
                                         biji kopi terbaik dari petani terpercaya.</p>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6">
+                            <div class="col-12 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
                                     <i class="fas fa-users mb-2 mb-md-2"
                                         style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
@@ -188,7 +188,7 @@
                                         yang diseduh dari biji kopi pilihan.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mx-auto mx-md-0">
+                            <div class="col-12 col-md-6 col-lg-4">
                                 <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded"
                                     style="border-top: 2px solid; border-right: 2px solid;">
                                     <i class="fas fa-mug-hot fa-2x fa-md-3x mb-2 mb-md-3"
@@ -318,11 +318,9 @@
                                 </div>
                             </div>
                         </div>
-        </section>
-
-        <!--Contact section  -->
-        </div>
-        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--Contact section  -->
@@ -412,10 +410,6 @@
 
 
 
-    <!-- font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
