Clean(html): move common inline styles to CSS utility classes (logo, header, buttons, about wrapper)

--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@
             <div class="row align-items-center justify-content-center g-3">
                 <div class="col-12 col-md-6 order-md-1 d-flex flex-column align-items-center">
                     <img src="assets/img/logo.png" alt="Enauto Coffee Logo"
-                        class="shadow-lg rounded-circle mt-lg-3 py-3 mb-3"
-                        style="width: 100%; max-width: 150px; height: auto;">
-                    <h1 class="my-2 display-1 fw-bold" style="font-size: clamp(1.5rem, 5vw, 3rem);">Enauto Coffe</h1>
+                        class="shadow-lg rounded-circle mt-lg-3 py-3 mb-3 logo-img">
+                    <h1 class="my-2 display-1 fw-bold header-title">Enauto Coffe</h1>
                     <p class="fs-4 mb-0" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">Coffe Shop Terbaik di Indonesia
                     </p>
                 </div>
-                <div
-                    class="col-12 col-md-6 order-md-2 py-lg-5 d-flex flex-column align-items-center justify-content-center gap-2">
-                    <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50"
-                        style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Login</a>
-                    <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50"
-                        style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Register</a>
+                <div class="col-12 col-md-6 order-md-2 py-lg-5 d-flex flex-column align-items-center justify-content-center gap-2">
+                    <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50 header-btn">Login</a>
+                    <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50 header-btn">Register</a>
                 </div>
             </div>
         </div>
@@ -84,8 +80,7 @@
         <!-- About section -->
         <section id="about"
             style="background-image: url(assets/img/image\ \(1\).png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 100vh; padding: 0;">
-            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-start justify-content-center text-light"
-                style="background-color: rgba(0, 0, 0, 0.655);">
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-start justify-content-center text-light">
                 <div class="row w-100">
                     <!-- Title -->
                     <div class="col-12 text-center py-3 py-md-5">
@@ -115,7 +110,7 @@
 
                     <!-- Cards -->
                     <div class="col-12 d-flex justify-content-center mb-4 mb-md-5">
-                        <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0" style="max-width: 700px;">
+                        <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0 about-cards-wrapper">
                             <div class="col-12 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
                                     <i class="fas fa-seedling mb-2 mb-md-2"
