Clean(html): move section backgrounds to CSS, remove inline font-size and img styles, use .product-thumb

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <body class="bg-dark">
 
     <!-- header -->
-    <header class="bg-dark text-light" style="background-image: url(assets/img/image\ \(6\).jpg);
-         background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 50vh;">
+    <header class="bg-dark text-light">
         <div class="container-fluid text-center text-light py-1 mt-1" style="background-color: rgba(0, 0, 0, 0.655);">
             <div class="row align-items-center justify-content-center g-3">
                 <div class="col-12 col-md-6 order-md-1 d-flex flex-column align-items-center">
@@ -34,7 +33,8 @@
                     <p class="fs-4 mb-0" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">Coffe Shop Terbaik di Indonesia
                     </p>
                 </div>
-                <div class="col-12 col-md-6 order-md-2 py-lg-5 d-flex flex-column align-items-center justify-content-center gap-2">
+                <div
+                    class="col-12 col-md-6 order-md-2 py-lg-5 d-flex flex-column align-items-center justify-content-center gap-2">
                     <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50 header-btn">Login</a>
                     <a href="#" class="btn btn-dark btn-lg px-4 px-md-5 fw-semibold w-50 header-btn">Register</a>
                 </div>
@@ -78,14 +78,12 @@
     <!-- main -->
     <main>
         <!-- About section -->
-        <section id="about"
-            style="background-image: url(assets/img/image\ \(1\).png); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 100vh; padding: 0;">
+        <section id="about">
             <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-start justify-content-center text-light">
                 <div class="row w-100">
                     <!-- Title -->
                     <div class="col-12 text-center py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0" style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
-                            About Us</h2>
+                        <h2 class="product-section-title display-1 mb-0">About Us</h2>
                     </div>
                     <!-- Paragraph -->
                     <div class="col-12 text-center mb-2  mx-auto" style="max-width: 1000px;">
@@ -142,17 +140,13 @@
             </div>
         </section>
 
-        <!--Features section  -->
-        <section id="features" class="product-section"
-            style="background-image: url(assets/img/image.jpg);
-         background-repeat: no-repeat; background-size: cover; background-attachment: fixed; min-height: 100vh; border: 2px solid; padding: 0">
+                    <!--Features section  -->
+        <section id="features" class="product-section">
             <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light"
                 style="background-color: rgba(0, 0, 0, 0.655);">
                 <div class="row">
                     <div class="col-12 text-center py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5"
-                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
-                            Our Features</h2>
+                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5">Our Features</h2>
                         <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Temukan fitur-fitur unik yang
                             membedakan Enauto Coffe dari yang lain. Dari
                             perpaduan kopi kami yang ahli hingga suasana nyaman, kami menawarkan pengalaman kopi yang
@@ -205,10 +199,8 @@
             <div class="container-fluid py-3 py-md-5 px-3 px-md-5 text-light">
                 <div class="row w-100 align-items-center justify-content-center py-2 py-md-3">
                     <div class="col-12 text-center mb-4 mb-md-5 ">
-                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3"
-                            style="font-size: clamp(1.5rem, 7vw, 3.5rem);">
-                            Our Pricing</h2>
-                        <p class="lead py-2 py-md-3" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe
+                        <h2 class="product-section-title display-1 my-3 my-md-5 py-3">Our Pricing</h2>
+                        <p class="lead py-2 py-md-3">Enauto Coffe
                             menawarkan berbagai pilihan kopi berkualitas tinggi dengan
                             harga
                             yang kompetitif. Mulai dari kopi hitam klasik hingga minuman kopi spesial, kami memiliki
@@ -223,13 +215,12 @@
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
                                     <img src="assets/img/product img/espresso.png" alt="Espresso"
-                                        class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                        class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Espresso</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$2.50
+                                        <h3>Espresso</h3>
+                                        <p class="fs-4 fw-bold">$2.50
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Kopi hitam pekat dengan
+                                        <p>Kopi hitam pekat dengan
                                             cita rasa yang kuat dan aroma yang menggoda.</p>
                                     </div>
                                 </div>
@@ -238,13 +229,12 @@
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
                                     <img src="assets/img/product img/cappuccino.png" alt="Cappuccino"
-                                        class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                        class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Cappuccino</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$3.50
+                                        <h3>Cappuccino</h3>
+                                        <p class="fs-4 fw-bold">$3.50
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Perpaduan sempurna antara
+                                        <p>Perpaduan sempurna antara
                                             espresso, susu panas, dan busa susu lembut.</p>
                                     </div>
                                 </div>
@@ -252,13 +242,12 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/latte.png" alt="Latte" class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                    <img src="assets/img/product img/latte.png" alt="Latte" class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Latte</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$4.00
+                                        <h3>Latte</h3>
+                                        <p class="fs-4 fw-bold">$4.00
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Minuman kopi creamy dengan
+                                        <p>Minuman kopi creamy dengan
                                             lebih banyak susu dan sedikit busa di atasnya.</p>
                                     </div>
                                 </div>
@@ -267,13 +256,12 @@
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
                                     <img src="assets/img/product img/Americano.png" alt="Americano"
-                                        class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                        class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Americano</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$3.00
+                                        <h3>Americano</h3>
+                                        <p class="fs-4 fw-bold">$3.00
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Kopi hitam yang diseduh
+                                        <p>Kopi hitam yang diseduh
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
@@ -284,13 +272,12 @@
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
                                     <img src="assets/img/product img/creme latte.png" alt="Creme Latte"
-                                        class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                        class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Creme Latte</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$3.00
+                                        <h3>Creme Latte</h3>
+                                        <p class="fs-4 fw-bold">$3.00
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Kopi hitam yang diseduh
+                                        <p>Kopi hitam yang diseduh
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
@@ -300,13 +287,12 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/coffe.png" alt="Coffe" class="img-fluid rounded"
-                                        style="width: 100px; height: 100px; object-fit: cover; margin-right: 1rem;">
+                                    <img src="assets/img/product img/coffe.png" alt="Coffe" class="img-fluid rounded product-thumb">
                                     <div>
-                                        <h3 style="font-size: clamp(1rem, 2vw, 1.3rem);">Coffe</h3>
-                                        <p class="fs-4 fw-bold" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">$3.00
+                                        <h3>Coffe</h3>
+                                        <p class="fs-4 fw-bold">$3.00
                                         </p>
-                                        <p style="font-size: clamp(0.8rem, 1.5vw, 0.95rem);">Kopi hitam yang diseduh
+                                        <p>Kopi hitam yang diseduh
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                     </div>
