--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
         </section>
 
-                    <!--Features section  -->
+        <!--Features section  -->
         <section id="features" class="product-section">
             <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light"
                 style="background-color: rgba(0, 0, 0, 0.655);">
@@ -242,7 +242,8 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/latte.png" alt="Latte" class="img-fluid rounded product-thumb">
+                                    <img src="assets/img/product img/latte.png" alt="Latte"
+                                        class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Latte</h3>
                                         <p class="fs-4 fw-bold">$4.00
@@ -287,7 +288,8 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/coffe.png" alt="Coffe" class="img-fluid rounded product-thumb">
+                                    <img src="assets/img/product img/coffe.png" alt="Coffe"
+                                        class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Coffe</h3>
                                         <p class="fs-4 fw-bold">$3.00
@@ -351,8 +353,8 @@
                             <h1 style="font-size: clamp(1.2rem, 3vw, 1.8rem);">Location</h1>
                             <iframe class="shadow-lg rounded-5 mt-3 mt-md-4 w-100"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.822149047318!2d110.40615!3d-7.797068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57fb5c5c5c5d%3A0x5c5c5c5c5c5c5c5c!2sEnauto%20Coffe!5e0!3m2!1sen!2sid!4v1234567890"
-                                style="width: 100%; height: 400px; border: 0; display: block;" allowfullscreen=""
-                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                style="width: 100%; border: 0; display: block;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
